fix tests on desktop