@@ -3,8 +3,10 @@ import org.gradle.api.JavaVersion
 import org.gradle.api.Plugin
 import org.gradle.api.Project
 import org.gradle.api.artifacts.VersionCatalogsExtension
+import org.gradle.api.tasks.testing.Test
 import org.gradle.kotlin.dsl.configure
 import org.gradle.kotlin.dsl.getByType
+import org.gradle.kotlin.dsl.withType
 import org.jetbrains.kotlin.gradle.dsl.JvmTarget
 import org.jetbrains.kotlin.gradle.dsl.KotlinMultiplatformExtension
 
@@ -68,6 +70,10 @@ class InfersKmpLibraryPlugin : Plugin<Project> {
                 sourceCompatibility = JavaVersion.toVersion(jvmTargetVersion)
                 targetCompatibility = JavaVersion.toVersion(jvmTargetVersion)
             }
+        }
+
+        target.tasks.withType<Test>().configureEach {
+            jvmArgs("--enable-native-access=ALL-UNNAMED")
         }
     }
 }
